force-app/main/default/objects/college__c/college__c.object-meta.xml
<CustomObject>
    <description>college for students</description>
    <label>college</label>
    <nameField>
        <label>college Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>