force-app/main/default/objects/college__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>city of college</description>
    <label>city</label>
    <length>20</length>
    <type>Text</type>
</CustomField>