force-app/main/default/objects/college__c/fields/collegeID__c.field-meta.xml
<CustomField>
    <fullName>collegeID__c</fullName>
    <description>college ID of college</description>
    <label>collegeID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>