force-app/main/default/objects/college__c/fields/picklistfield__c.field-meta.xml
<CustomField>
    <fullName>picklistfield__c</fullName>
    <label>picklistfield</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>f</fullName>
            </value>
            <value>
                <fullName>c</fullName>
                <isActive>false</isActive>
                <label>c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>