force-app/main/default/objects/college__c/fields/university__c.field-meta.xml
<CustomField>
    <fullName>university__c</fullName>
    <description>university of college</description>
    <label>university</label>
    <length>30</length>
    <type>Text</type>
</CustomField>